# DeeSim

./: .env.example  .gitignore  CLIENTS.md  Dockerfile  FEATURES.md  Makefile  README.md  TODO.md  campaign_registry.json  discord_walkthrough.md  docker-compose.yml  inspect_diverse.py  inspect_names_simple.py  launcher.py  lint.sh  permissions.json  play.sh  pyproject.toml  requirements.txt  run.sh  run_bot.sh  setup_slack.sh  slack_walkthrough.md  start.sh  test_names.py  verify_models.py  walkthrough.md
scripts/: debug_ollama.py  inspect_anglo.py  inspect_names.py  inspect_sdk.py  migrate_to_sqlite.py  test_combat_skill.py  test_imagen.py  test_skill_flow.py  verify_claude.py  verify_llm.py  verify_local_tools.py  verify_memory.py
skills/loot_generation/: SKILL.md
skills/manage_quests/: SKILL.md
skills/run_combat/: SKILL.md
skills/session_flow/: SKILL.md
skills/social_conflict/: SKILL.md
src/: bot.py  check_models.py  common_tools.py  discord_bot.py  dm_utils.py  dnd_bridge.py  initial_rules.txt  llm_bridge.py  mcp_server.py  play.py  verify_multi.py  wizard.py
src/core/: campaign.py  database.py  engine.py  permissions.py  players.py  state_manager.py
src/dnd/: dice.py  rules_engine.py
src/dnd/attribution/: __init__.py  citation.py  confidence.py  formatters.py  source_tracking.py
src/dnd/core/: cache.py  formatters.py  prompts.py  resources.py  tools.py
src/dnd/query_enhancement/: __init__.py  category_prioritization.py  fuzzy_matching.py  synonyms.py  tokenizer.py
src/dnd/templates/: __init__.py  equipment.py  formatter.py  monster.py  spell.py
tests/: test_database.py  test_dice.py
