[project]
name = "deesim"
version = "0.1.0"
description = "Agentic Dungeon Master - AI-powered D&D 5e campaign manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "google-genai>=1.0.0",
    "mdutils>=1.6.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
    "prompt_toolkit>=3.0.0",
    "chromadb>=1.5.1",
]

[project.optional-dependencies]
slack = [
    "slack-bolt>=1.18.0",
]
discord = [
    "discord.py>=2.3.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
]
